add integration with kafka

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-# database configs
-spring.datasource.url=jdbc:mysql://localhost:3306/db?useTimezone=true&serverTimezone=America/Sao_Paulo
+################################################
+# database configs                             #
+################################################
+spring.datasource.url=jdbc:mysql://localhost:3306/db?useSSL=false&useTimezone=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
@@ -10,7 +12,23 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-
-#swagger configs
+################################################
+# swagger configs                              #
+################################################
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-api-person.html
+
+
+################################################
+# Kafka Producer properties                    #
+################################################
+spring.kafka.producer.bootstrap-servers=127.0.0.1:29092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.group-id=group_id
+topic.name.producer=person
+
+################################################
+# Common Kafka Properties                      #
+################################################
+auto.create.topics.enable=true
