add localstack image to docker-compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 ################################################
 # swagger configs                              #
 ################################################
-springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/swagger-api-person.html
+springdoc.swagger-ui.path=/swagger-ui.html
 
+################################################
+# swagger configs                              #
+################################################
+server.port=8080
 
 ################################################
 # Kafka Producer properties                    #
