--- a/build.gradle
+++ b/build.gradle
@@ -24,13 +24,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
-    implementation "javax.validation:validation-api:2.0.1.Final"
+    implementation 'javax.validation:validation-api:2.0.1.Final'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0"
-    implementation "org.springframework.boot:spring-boot-starter-cache:3.2.0"
+    implementation 'org.springframework.boot:spring-boot-starter-cache:3.2.0'
 //    implementation "org.springframework.boot:spring-boot-starter-security:3.2.0"
-    implementation("org.springframework.kafka:spring-kafka")
-    implementation "org.apache.kafka:kafka-streams:3.6.0"
+    implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
+    implementation 'org.apache.kafka:kafka-streams:3.6.0'
     runtimeOnly 'com.mysql:mysql-connector-j'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
