--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,7 @@ topic.name.producer=person
 # Common Kafka Properties                      #
 ################################################
 auto.create.topics.enable=true
+
+################################################
+# Actuator config                              #
+################################################
